# TMS320VC5509A

./: .ccsproject  .clangd  .cproject  CMakeLists.txt  VC5509.cmd  main.c  vectors.s55
.launches/: demo.launch
Adapter/GUI/: gui.c  gui.cpp  gui.h
Adapter/GUI/font/: fonts_16x16_index.TXT  fonts_18x18.TXT  fonts_18x18_index.TXT
Adapter/GUI/gui-simulator/: CMakeLists.txt  main.cpp  test.cpp
Adapter/GUI/gui-simulator/Drivers/: simulator.cpp  simulator.hpp
Adapter/GUI/lvgl-simulator/: CMakeLists.txt  main.cpp  test.cpp
Adapter/GUI/lvgl-simulator/Drivers/: simulator.cpp  simulator.hpp
Adapter/GUI/python/: font.py
Adapter/GUI/u8g2-simulator/Drivers/: simulator.hpp
Algorithm/inc/: AsyncDelay.h  Flag.h
App/: main.c
App/1_debug/: main.c
App/2_map/: add.c  main.c
App/4_sdram/: main.c
App/4_sdram/common/: util.c  util.h
App/5_TIM_INT/: main.c
App/9_LCD/: main.c
App/9_LCD/ui/: ui.c  ui.h
App/conf/: app_conf.h
App/demo/: main.c  main.cpp
App/demo/ui/: ui.c  ui.cpp
BSP/inc/: dip.h  key.h  lcd.h  led.h  oled.h  sdram.h
BSP/src/: dip.cpp  key.cpp  lcd.c  led.cpp  oled.c  oled.cpp  sdram.c
Core/: core.cpp  core.h  main.cpp
Core/C55xxCSL/asm/: irq_pluga.asm  usb_vect.asm
Core/C55xxCSL/src/: _csl_init.c  adc_cfg.c  adc_cfga.c  adc_gcfg.c  adc_read.c  adc_setfreq.c  bct_close.c  bct_open.c  csl.c  csl_bctdat.c  csl_chipdat.c  csl_csldat.c  csl_dmadat.c  csl_emifdat.c  csl_errdat.c  csl_gpiodat.c  csl_gptdat.c  csl_hpidat.c  csl_i2cdat.c  csl_icachedat.c  csl_irqdat.c  csl_mcbspdat.c  csl_mmcdat.c  csl_plldat.c  csl_pwrdat.c  csl_rtcdat.c  csl_sysdat.c  csl_timdat.c  csl_uartdat.c  csl_vers.c  csl_wdtimdat.c  csllibs.c  dat_close.c  dat_copy.c  dat_copy2d.c  dat_fill.c  dat_open.c  dat_wait.c  dma_cfg.c  dma_cfgb.c  (+248 more)
Core/Drivers/inc/: zq_adc.h  zq_conf.h  zq_cpu.h  zq_delay.h  zq_gpio.h  zq_i2c.h  zq_init.h  zq_interrupt.h  zq_pll.h  zq_sdram.h  zq_systick.h  zq_timer.h
Core/Drivers/src/: zq_conf.c  zq_conf.cpp  zq_cpu.c  zq_delay.c  zq_delay.cpp  zq_gpio.cpp  zq_init.cpp  zq_interrupt.c  zq_pll.c  zq_pll.cpp  zq_systick.cpp  zq_timer.cpp
Core/ui/: ui.cpp  ui.h
Docs/: GUI.txt  一簇奇思妙想的火.txt
Drivers/inc/: zq_conf.h  zq_delay.h  zq_drivers.h  zq_gpio.h  zq_i2c.h  zq_init.h  zq_mmr.h  zq_pll.h  zq_sdram.h  zq_systick.h  zq_timer.h
Drivers/src/: zq_conf.cpp  zq_init.cpp  zq_sdram.cpp
GUI_Simulator/font/: fonts_10x10.TXT  fonts_10x10_index.TXT  fonts_12x8.TXT  fonts_12x8_index.TXT  fonts_16x16.TXT  fonts_8x10.TXT
GUI_Simulator/gui-simulator/: CMakeLists.txt  main.cpp  test.cpp
GUI_Simulator/gui-simulator/Drivers/: simulator.cpp  simulator.hpp
GUI_Simulator/python/: font.py
Middleware/DSP/include/: Dsplib.h  Dsplib_c.h
Middleware/GUI/: fonts_10x10.h  fonts_10x8.h  fonts_12x8.h  fonts_16x16.h  fonts_18x18.h  fonts_8x10.h  zq_font.h  zq_font_base.h  zq_gui.cpp  zq_gui.h  zq_image_base.h
Projects/1_debug/: main.cpp
Projects/3_memory/: memory.c
Projects/9_LCD/: main.cpp
Projects/9_LCD/ui/: ui.c
Projects/conf/: app_conf.h  app_conf.h.in
Projects/demo/: main.cpp
Projects/demo/ui/: ui.cpp  ui.h
Tools/cmake/: arm-gcc.cmake  ti_c5500.cmake
Tools/config/: ti-c5500.yaml
Tools/scripts/: C55x_GCC_LinkerScript.ld
User/Docs/: App.txt  一簇奇思妙想的火.txt  驱动库.txt
User/Tools/cmake/: arm-gcc.cmake
User/Tools/config/: ti-c5500.yaml
targetConfigs/: TMS320C5509A.ccxml
